--- a/settings.json
+++ b/settings.json
@@ -60,7 +60,7 @@
     "notebook.diff.ignoreMetadata": true,
     "notebook.lineNumbers": "on",
     "notebook.markup.fontSize": 13,
-    "python.defaultInterpreterPath": "~/.pyenv/shims/python",
+    // "python.defaultInterpreterPath": "~/.pyenv/shims/python",
     "python.formatting.provider": "yapf",
     "python.languageServer": "Pylance",
     "python.linting.enabled": false,
@@ -83,5 +83,5 @@
 
 
 
-      "python.defaultInterpreterPath": "/home/lewagonenv/bin/python"
+      // "python.defaultInterpreterPath": "/home/lewagonenv/bin/python"
 }
